--- a/public_html/assets/css/2018ReconoceloMonitor.css
+++ b/public_html/assets/css/2018ReconoceloMonitor.css
@@ -1,16 +1,30 @@
+       body {
+           padding-top: 80px;
+       }
        
-
-body { padding-top: 80px; } 
-.navbar {
-   background:#034889 ;
-}
-a{
-    color: #fff;
-}
-a:hover{
-      color: #6C7DAC;
-}
-.navbar-toggler{
-   color: #fff;  
-   background-color: #6C7DAC;
-}
+       .navbar {
+           background: #034889;
+       }
+       
+       a {
+           color: #fff;
+       }
+       
+       a:hover {
+           color: #6C7DAC;
+       }
+       
+       .navbar-toggler {
+           color: #fff;
+           background-color: #6C7DAC;
+       }
+       
+       #Depositos {
+           float: left;
+           width: 49%;
+       }
+       
+       #Canjes {
+           float: left;
+           width: 49%;
+       }
