select con scroll

--- a/public_html/assets/css/2018Reconocelo.css
+++ b/public_html/assets/css/2018Reconocelo.css
@@ -111,3 +111,9 @@ body {
 .dropdown-item:hover {
     background: #f25917;
 }
+
+.scrollable-menu {
+    height: auto;
+    max-height: 500px;
+    overflow-x: hidden;
+}
