--- a/public_html/assets/css/2018ReconoceloMonitor.css
+++ b/public_html/assets/css/2018ReconoceloMonitor.css
@@ -41,3 +41,11 @@ a:hover {
     border-color: #8EB4E0;
     color: #034889;
 }
+
+.selectElementMonitor {
+    color: #000000;
+}
+
+.selectElementMonitor:hover {
+    color: #034889;
+}
