cambios modal listo

--- a/public_html/assets/css/2018Reconocelo.css
+++ b/public_html/assets/css/2018Reconocelo.css
@@ -121,3 +121,11 @@ body {
 .space-ticket {
     padding-right: 30px;
 }
+
+.CerrarTicketAdmin {
+    color: #034889;
+}
+
+.CerrarTicketAdmin:hover {
+    color: #007bff;
+}
