--- a/public_html/assets/css/ReconoceloStyles.css
+++ b/public_html/assets/css/ReconoceloStyles.css
@@ -153,3 +153,132 @@ input[type=password] {
 
 
 /* Fin estilos Reconocelo login */
+
+/* Estilos Reconocelo */
+.cardAyuda {
+    border-color: var(--colorBlanco);
+}
+
+.card-bodyAyuda {
+    border-color: var(--colorBlanco);
+}
+
+.iconsAyuda {
+    color: var(--colorAzul);
+}
+
+.iconsAyuda2 {
+    color: var(--colorNaranja);
+}
+
+.AyudaFormularioRow {
+    background-color: #e6eaed;
+    border-color: #e6eaed;
+}
+
+.iconsAyuda3 {
+    color: var(--colorGrisClaro);
+}
+
+.lblText {
+    color: #E74B0F;
+}
+
+.btn-primary {
+    background: var(--colorAzul);
+}
+
+.advice {
+    font-size: 12px;
+}
+
+.navcolor {
+    background: var(--colorAzul);
+}
+
+.btn-navbarcolor {
+    background: #E74B0F;
+}
+
+.btn-outline-secondary {
+    color: var(--colorBlanco);
+    background: var(--colorAzul);
+    border-color: var(--colorAzul);
+}
+
+.btn-outline-secondary:hover {
+    /* color: #fff;*/
+    background-color: #F25917;
+    border-color: #E74B0F;
+}
+
+.cardsWelcomeBackgroud {
+    background: #8FB5E1;
+}
+
+.btn-outline-dark {
+    background: #8FB5E1;
+    border-color: #4D90DC;
+    color: #3C444D;
+}
+
+.btn-outline-dark:hover {
+    /* color: #fff;*/
+    background-color: #EC4B17;
+    border-color: #EC4B17;
+}
+
+.btn-warning {
+    background: #EC4B17;
+    border-color: #E74B0F;
+}
+
+.btn-warning:hover {
+    /* color: #fff;*/
+    background-color: #F25917;
+    border-color: #E74B0F;
+}
+
+.price {
+    font-size: 1.2em;
+}
+
+.giftsArea {
+    background: var(--colorBlacoGris);
+}
+
+.headerColor {
+    background: #0B0909;
+    color: #F25917;
+}
+
+.linkPrivacy {
+    color: #F25917;
+}
+
+.dropdown-menu {
+    background: #4d90dc;
+}
+
+.dropdown-item:hover {
+    background: #f25917;
+}
+
+.scrollable-menu {
+    height: auto;
+    max-height: 500px;
+    overflow-x: hidden;
+}
+
+.space-ticket {
+    padding-right: 30px;
+}
+
+.CerrarTicketAdmin {
+    color: var(--colorAzul);
+}
+
+.CerrarTicketAdmin:hover {
+    color: #007bff;
+}
+/* Fin estilos reconocelo*/
