--- a/public_html/assets/css/2018Reconocelo.css
+++ b/public_html/assets/css/2018Reconocelo.css
@@ -133,8 +133,8 @@ body {
 /* Animaciones */
 
 .animated {
-  -webkit-animation-duration: 1s;
-  animation-duration: 1s;
+  -webkit-animation-duration: 2s;
+  animation-duration: 2s;
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
 }
@@ -146,7 +146,7 @@ body {
   animation-fill-mode: both;
 }
 
-@keyframes fadeIn {
+@keyframes apareciendo {
   from {
     opacity: 0;
   }
@@ -156,8 +156,8 @@ body {
   }
 }
 
-.fadeIn {
-  animation-name: fadeIn;
+.apareciendo {
+  animation-name: apareciendo;
 }
 
 /* Fin animaciones */
