--- a/public_html/assets/css/2018ReconoceloMonitor.css
+++ b/public_html/assets/css/2018ReconoceloMonitor.css
@@ -50,13 +50,46 @@ a:hover {
     color: #034889;
 }
 
-.colorSeleccion:hover{
-    cursor:pointer;
-    background-color:#EAEAEA;
+.colorSeleccion:hover {
+    cursor: pointer;
+    background-color: #EAEAEA;
     border-radius: 4px;
 }
 
-.colorSeleccion:active{
-    background-color:#CCCCCC;
+.colorSeleccion:active {
+    background-color: #CCCCCC;
     border-radius: 4px;
 }
+
+
+/* Animaciones */
+
+.animated {
+    -webkit-animation-duration: 2s;
+    animation-duration: 2s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+}
+
+.fast {
+    -webkit-animation-duration: 0.4s;
+    animation-duration: 0.4s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+}
+
+@keyframes apareciendo {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+.apareciendo {
+    animation-name: apareciendo;
+}
+
+
+/* Fin animaciones */
