--- a/public_html/assets/css/ReconoceloLogin_Monitor.css
+++ b/public_html/assets/css/ReconoceloLogin_Monitor.css
@@ -56,3 +56,35 @@ input[type=password] {
 #olvidoPassword:hover {
     color: #cccccc;
 }
+
+/* Animaciones */ 
+
+.animated {
+    -webkit-animation-duration: 2s;
+    animation-duration: 2s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+}
+
+.fast {
+    -webkit-animation-duration: 0.4s;
+    animation-duration: 0.4s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+}
+
+@keyframes apareciendo {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+.apareciendo {
+    animation-name: apareciendo;
+}
+
+
+/* Fin animaciones */
