--- a/public_html/assets/css/ReconoceloMonitor.css
+++ b/public_html/assets/css/ReconoceloMonitor.css
@@ -1,3 +1,70 @@
+body {
+    background: #FFFFFF;
+    font-family: 'Roboto Condensed', sans-serif;
+}
+
+.bg-ligh {
+    background: #FFFFFF;
+    border-color: #FFFFFF;
+}
+
+.input-group-text {
+    background: #034889;
+    color: white;
+}
+
+.btn-primary {
+    background: #034889;
+    border-color: #034889;
+    color: #f2f2f2;
+}
+
+.btn-primary:hover {
+    background: #8EB4E0;
+    border-color: #8EB4E0;
+    color: #034889;
+}
+
+a:link {
+    color: #034889;
+}
+
+.errormessage {
+    color: red;
+    text-align: center;
+}
+
+.headerColor {
+    background: black;
+}
+
+.sizetopbottom {
+    height: 40px;
+    color: white;
+}
+
+.colorhead {
+    background: #034889;
+    color: white;
+}
+
+input[type=password] {
+    border-radius: 0;
+    text-transform: uppercase;
+}
+
+#olvidoPassword:hover {
+    color: #cccccc;
+}
+
+.upperCase {
+    text-transform: uppercase;
+}
+
+#errorMessage {
+    display: none;
+}
+
 .navbar {
     background: #034889;
 }
@@ -12,6 +79,14 @@ a:hover {
 
 .navbar-toggler {
     color: #fff;
+    background-color: #6C7DAC;
+}
+
+.nav-item a {
+    color: #FFFFFF;
+}
+
+.nav-item a:hover {
     background-color: #6C7DAC;
 }
 
