--- a/public_html/assets/css/ReconoceloMonitor.css
+++ b/public_html/assets/css/ReconoceloMonitor.css
@@ -87,7 +87,30 @@ a:hover {
 }
 
 .nav-item a:hover {
-    background-color: #6C7DAC;
+    background-color: #FFFFFF;
+    border-radius: 10px;
+    color: #034889;
+}
+
+.dropdown-menu {
+    background-color: #034889;
+}
+
+.dropdown-menu .dropdown-item {
+    background-color: #034889;
+    color: #FFFFFF;
+}
+
+.dropdown-menu .dropdown-item:hover {
+    color: #034889;
+}
+
+#depositosPuntos:hover {
+    background-color: #FFFFFF;
+}
+
+#depositosPuntosInsertar:hover {
+    background-color: #FFFFFF;
 }
 
 #Depositos {
@@ -134,6 +157,14 @@ a:hover {
 .colorSeleccion:active {
     background-color: #CCCCCC;
     border-radius: 4px;
+}
+
+.dataUserRecononoceloMonitor #configuracionUsuarioMonitor:hover {
+    background-color: #FFFFFF;
+}
+
+.dataUserRecononoceloMonitor #salirReconoceloMonitor:hover {
+    background-color: #FFFFFF;
 }
 
 
