--- a/public_html/assets/css/ReconoceloMantenimiento.css
+++ b/public_html/assets/css/ReconoceloMantenimiento.css
@@ -1,9 +1,25 @@
+:root{
+    --colorBlanco: #FFFFFF;
+    --colorAzul: #034889;
+    --colorMorado: #8EB4E0;
+    --colorRojo:#FF0000;
+    --colorNegro:#000000;
+    --colorGris:#CCCCCC;
+    --colorGris2:#EAEAEA;
+    --colorBlanco2:#f2f2f2;
+    --colorAzulMorado:#6C7DAC;
+    /* */
+    --textTransform:uppercase;
+    --cursor:pointer;
+    --borderRadius:4px;
+}
+
 .upperCase {
-    text-transform: uppercase;
+    text-transform: var(--textTransform);
 }
 
 .errormessage {
-    color: red;
+    color: var(--colorRojo);
 }
 
 #errorMessage {
