Realizando algunos cambios minimos en Reconocelo

--- a/public_html/assets/css/2018Reconocelo.css
+++ b/public_html/assets/css/2018Reconocelo.css
@@ -130,34 +130,44 @@ body {
     color: #007bff;
 }
 
+
 /* Animaciones */
 
 .animated {
-  -webkit-animation-duration: 2s;
-  animation-duration: 2s;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
+    -webkit-animation-duration: 2s;
+    animation-duration: 2s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
 }
 
 .fast {
-  -webkit-animation-duration: 0.4s;
-  animation-duration: 0.4s;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
+    -webkit-animation-duration: 0.4s;
+    animation-duration: 0.4s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
 }
 
 @keyframes apareciendo {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-  }
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
 
 .apareciendo {
-  animation-name: apareciendo;
+    animation-name: apareciendo;
 }
 
+
 /* Fin animaciones */
+
+.borrarCarritoReconocelo {
+    cursor: pointer;
+}
+
+.borrarCarritoReconocelo:hover {
+    color: #E64C13;
+    cursor: pointer;
+}
