Botones del menu de reconocelo ya es diferente

--- a/public_html/assets/css/2018Reconocelo.css
+++ b/public_html/assets/css/2018Reconocelo.css
@@ -54,6 +54,10 @@ body {
     background: var(--colorNaranja);
 }
 
+.nav-item-menuReconocelo{
+    transition: all 5s;
+}
+
 .btn-outline-secondary {
     color: var(--colorBlanco);
     background: var(--colorAzul);
