--- a/public_html/assets/css/ReconoceloMantenimiento.css
+++ b/public_html/assets/css/ReconoceloMantenimiento.css
@@ -1,4 +1,7 @@
 @import 'globalStyles.css';
+body {
+    font-family: 'Philosopher', sans-serif;
+}
 
 .upperCase {
     text-transform: var(--textTransform);
