--- a/public_html/assets/css/ReconoceloStyles.css
+++ b/public_html/assets/css/ReconoceloStyles.css
@@ -4,6 +4,7 @@
 
 body {
     background-color: var(--colorBlanco);
+    font-family: 'Philosopher', sans-serif;
 }
 
 .titleReconocelo {
@@ -17,26 +18,26 @@ body {
 
 .card {
     box-shadow: 0px 1px 0 hsl(174, 5%, 80%), 0 0 5px rgba(0, 0, 0, .05), 0 1px 3px rgba(0, 0, 0, .2), 0 3px 5px rgba(0, 0, 0, .2), 0 5px 10px rgba(0, 0, 0, .2), 0 10px 10px rgba(0, 0, 0, .2), 0 20px 20px rgba(0, 0, 0, .3);
-    border-radius: calc((var(--borderRadius)*5)+5);
+    border-radius: 25px;
     border: 0px solid transparent;
 }
 
 .card-body {
     background: var(--colorGrisClaro);
     border-color: var(--colorGrisClaro);
-    border-radius: 0px 0px calc((var(--borderRadius)*5)+5) calc((var(--borderRadius)*5)+5);
+    border-radius: 0px 0px 25px 25px;
 }
 
 .input-group-text {
     background: var(--colorAzul);
     color: var(--colorBlacoGris);
-    border-radius: calc(var(--borderRadius)+6);
+    border-radius: 10px;
     border-color: var(--colorAzul);
 }
 
 input[type=text],
 input[type=password] {
-    border-radius: calc(var(--borderRadius)+6);
+    border-radius: 10px;
     border-color: var(--colorBlacoGris);
 }
 
@@ -134,7 +135,9 @@ input[type=password] {
 
 /* Fin estilos Reconocelo login */
 
+
 /* Estilos Reconocelo */
+
 .cardAyuda {
     border-color: var(--colorBlanco);
 }
@@ -261,37 +264,39 @@ input[type=password] {
 .CerrarTicketAdmin:hover {
     color: #007bff;
 }
+
+
 /* Fin estilos reconocelo*/
 
 
 /* Animaciones */
 
 .animated {
-  -webkit-animation-duration: 2s;
-  animation-duration: 2s;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
+    -webkit-animation-duration: 2s;
+    animation-duration: 2s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
 }
 
 .fast {
-  -webkit-animation-duration: 0.4s;
-  animation-duration: 0.4s;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
+    -webkit-animation-duration: 0.4s;
+    animation-duration: 0.4s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
 }
 
 @keyframes apareciendo {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-  }
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
 
 .apareciendo {
-  animation-name: apareciendo;
+    animation-name: apareciendo;
 }
+
 
 /* Fin animaciones */
